test/errhandling/no-prop.good
calling noPropError
should not propagate
no-prop.chpl:5: error: uncaught error
